# retino-pypeline

./: .gitignore  .gitmodules  CITATION.bib  README.md  glm.py  pyproject.toml  retino-pypeline.rec  retino.py  setup.cfg  topup.py
retino/: __init__.py  glm.py  old_workflows.py  workflows.py
retino/cli/: analysis.py  base.py  preprocessing.py
retino/interfaces/: denoise.py  glm.py  motion.py  nordic.py  preprocess.py  tools.py  topup.py
retino/tools/: glm.py  motion.py
retino/workflows/: analysis.py  base.py  base_nodes.py  old_analysis.py  preprocessing.py  tools.py
retino/workflows/analysis/: __init__.py  analysis.py  builder.py  nodes.py  workflow_manager.py
retino/workflows/base/: builder.py  nodes.py  workflow_manager.py
retino/workflows/preprocessing/: __init__.py  builder.py  extras.py  nodes.py  preprocessing.py  workflow_manager.py
scripts/: benchmark.py  neurodocker.sh  preproc.sh  retino.rec  retino_full.rec  run_preprocessing.py  spm_fsl.rec
src/retino_pypeline/: cli_analysis.py  cli_preprocessing.py
src/retino_pypeline/conf/: analysis.yaml  grid_patch  preprocessing.yaml  preprocessing_topaze.yaml
src/retino_pypeline/conf/dataset/: local.yaml  neurospin.yaml  topaze.yaml
src/retino_pypeline/conf/denoiser/: default.yaml  nordic.yaml  optimal-full.yaml
src/retino_pypeline/conf/nipype/: default.yaml  nipype.yaml
src/retino_pypeline/conf/nipype_plugin/: multiproc.yaml  slurm_local.yaml  slurm_topaze.yaml  slurmgraph_local.yaml
src/retino_pypeline/interfaces/: denoise.py  glm.py  motion.py  nordic.py  tools.py  topup.py
src/retino_pypeline/nodes/: __init__.py  analysis.py  base.py  preprocessing.py
src/retino_pypeline/tools/: glm.py  motion.py
src/retino_pypeline/workflows/: __init__.py  analysis.py  base.py  preprocessing.py  tools.py
src/retino_pypeline/workflows/analysis/: nodes.py
src/retino_pypeline/workflows/base/: __init__.py  builder.py  nodes.py  workflow_manager.py
src/retino_pypeline/workflows/preprocessing/: __init__.py  nodes.py  preprocessing.py  scenarios.py
