[tool.poetry]
name = "retino-pypeline"
version = "0.0.0"
description = "Simple fMRI pypeline manager, targeting retinotopy analysis."
authors = ["Pierre-antoine Comby <pierre-antoine.comby@crans.org>"]

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = ["libs", "retino"]


# Formatting using black.
[tool.black]

[tool.isort]
profile = "black"
