[project]
name = "retino-pypeline"
version = "1.0"
description = "Workflow manager for preprocessing and analysis of retinotopy paradigm."
authors = [
    {name = "Pierre-antoine Comby", email = "pierre-antoine.comby@crans.org"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["fMRI", "nipype", "pipeline"]

dependencies = [
"numpy",
"scipy",
"nipype @ git+https://github.com/nipy/nipype@cdfe679a49f86d2ae1e611fedbe62144c52e3435",
"nilearn",
"nibabel",
"tqdm",
"nipy",
"scikit-image",
"patch-denoise",
"hydra-core",
"hydra-callbacks"
]

[project.optional-dependencies]
dev = ["black", "isort"]

[project.urls]
homepage = "https://github.com/paquiteau/retino-pypeline"

[project.scripts]
retino-prep = "retino_pypeline.cli_preprocessing:main"
retino-glm = "retino_pypeline.cli_analysis:main"

[build-system]
requires = ["setuptools","setuptools_scm", "wheel"]

[tool.setuptools.package-data]
retino_pypeline = ["src/retino_pypeline/libs/NORDIC_Raw/*.m"]

# Formatting using black.
[tool.black]

[tool.isort]
profile = "black"
